# nvidia-study

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cuda/: README.md
cuda/bank_conflict/: Makefile
cuda/gemm/: Makefile  gemm.cu
cuda/pinned_memory/: Makefile  pinned_memory.cu
cuda/src/bank_conflict/: bank_conflict.cu
cuda/thread_indexing/: Makefile  thread_indexing.cu
cuda/triton_link_cuda/: Makefile  add_triton.py  main.cu
cuda/triton_link_cuda/aot/: eltadd.eb3e0ac1_01234.c  eltadd.eb3e0ac1_01234.h
cuda/utils/: utils.hpp
docs/cuda/: 2025-06-19-bank_conflict.md  2025-06-19-pinned_memory.md  GEMM - 1.md  Online normalizer calculation for softmax.md  Triton kernel linking with CUDA C++.md  archs.md  bank_conflict.md  cuda-tile.md  gemm_1.md  gemm_2.md  online_softmax.md  pinned_memory.md  softmax.md  thread_indexing.md
src/cuda/: CMakeLists.txt
src/cuda/bank_conflict/: CMakeLists.txt  bank_conflict.cu
src/cuda/gemm/: CMakeLists.txt  gemm.cu  gemm_caller.cuh  kernel_0.cuh  kernel_1.cuh  kernel_2.cuh
src/cuda/pinned_memory/: CMakeLists.txt  pinned_memory.cu
src/cuda/thread_indexing/: CMakeLists.txt  thread_indexing.cu
src/cuda/utils/: utils.h  utils.hpp
